--- a/resources/themes/bootstrap/css/style.css
+++ b/resources/themes/bootstrap/css/style.css
@@ -4,6 +4,7 @@
 
 body {
     padding: 70px 0 0;
+	background-color: #8A8A8A;
 }
 
 body.breadcrumb-fixed {
@@ -19,6 +20,17 @@ body.breadcrumb-fixed {
 /* -----| HEADER |----------------------------------------------------------- */
 /* -------------------------------------------------------------------------- */
 
+#page-navbar
+{
+	background-color: #191919;
+	border-bottom: 1px solid #2B2B2B;
+}
+
+#page-navbar a
+{
+	color: #ACE2E1;
+}
+
 #page-navbar .navbar-text {
     display: block;
     float: left;
@@ -27,6 +39,7 @@ body.breadcrumb-fixed {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+	color: white;
 }
 
 
@@ -42,6 +55,12 @@ body.breadcrumb-fixed {
 
 #directory-listing {
     font-family: 'Cutive Mono', monospace, serif;
+	
+}
+
+.clearfix
+{
+	color: #E0DEE0;
 }
 
 #directory-listing li {
@@ -54,10 +73,6 @@ body.breadcrumb-fixed {
     white-space: nowrap;
 }
 
-.file-name i {
-    color: #555;
-}
-
 .file-info-button,
 .web-link-button {
     display: inline-block;
@@ -68,11 +83,11 @@ body.breadcrumb-fixed {
     top: 4px;
 }
 
+.file-name i,
 .web-link-button i,
 .file-info-button i {
-    color: #999;
+    color: #555;
 }
-
 
 /* ---------------------------------------------------------------------------------------------- */
 /* -----| FOOTER |------------------------------------------------------------------------------- */
